Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8036

lustreapi.h should not define ARRAY_SIZE()

XMLWordPrintable

    • 3
    • 9223372036854775807

      After http://review.whamcloud.com/#/c/10029/ LU-4931 ladvise: Add feature of giving file access advices, lustreapi.h unconditionally defines an ARRAY_SIZE() macro. This is inappropriate for lustreapi.h and may cause unexpected compilation failures when lustreapi.h is used out of tree (or perhaps even in tree). Instead we should do

      #ifndef ARRAY_SIZE
      # define ARRAY_SIZE(a) ...
      #endif
      

      (after all headers have been included) in lustre/utils/lfs.c and lustre/utils/req-layout.c.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: