LU-8036 utils: remove ARRAY_SIZE() define from lustreapi.h

Remove the definition of ARRAY_SIZE() from lustreapi.h.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I57b1893e7ecd57d841f5b9348a8d5285cbc02124
Reviewed-on: http://review.whamcloud.com/19818
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>