lustre/include/lustre/lustreapi.h
@@ -46,8 +46,6 @@
 #include <stdint.h>
 #include <lustre/lustre_user.h>
 
-#define ARRAY_SIZE(a) ((sizeof(a)) / (sizeof((a)[0])))
-
 extern bool liblustreapi_initialized;
 
 
